fix merge conflicts

--- a/notebooks/iNaturalist.ipynb
+++ b/notebooks/iNaturalist.ipynb
@@ -18,10 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-<<<<<<< HEAD
-   "id": "c89024fe",
-=======
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +29,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-   "id": "2563b0b7",
-=======
    "execution_count": 4,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [
     {
@@ -52,31 +43,6 @@
     },
     {
      "data": {
-<<<<<<< HEAD
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84b20254ae8149aa817956ad7c060110",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "created iNaturalist.duckdb\n",
-      "add indexes\n"
-     ]
-    },
-    {
-     "data": {
-=======
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -113,11 +79,7 @@
        "0     131805543"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 2,
-=======
      "execution_count": 4,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,12 +116,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-   "id": "3e50b281",
-=======
    "execution_count": 5,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [
     {
@@ -177,12 +134,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-   "id": "b9d5b351",
-=======
    "execution_count": 6,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [
     {
@@ -223,11 +175,7 @@
        "0          131805543"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 4,
-=======
      "execution_count": 6,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,12 +191,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-   "id": "263ca441",
-=======
    "execution_count": 7,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [
     {
@@ -718,12 +661,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 6,
-   "id": "477bc27b",
-=======
    "execution_count": 8,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [
     {
@@ -798,47 +736,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483980</th>\n",
-<<<<<<< HEAD
-       "      <td>Synchaeta grimpei</td>\n",
-=======
        "      <td>Acrophymus veseyi</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483981</th>\n",
-<<<<<<< HEAD
-       "      <td>Dichapetalum chlorinum</td>\n",
-=======
        "      <td>Ptecticus erectus</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483982</th>\n",
-<<<<<<< HEAD
-       "      <td>Anthocharis cethura catalina</td>\n",
-=======
        "      <td>Namanereis</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483983</th>\n",
-<<<<<<< HEAD
-       "      <td>Chiropterotriton totonacus</td>\n",
-=======
        "      <td>Nierembergia pinifolia</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483984</th>\n",
-<<<<<<< HEAD
-       "      <td>Centaurea austroanatolica</td>\n",
-=======
        "      <td>Cyathostemon blackettii</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -847,20 +765,6 @@
        "</div>"
       ],
       "text/plain": [
-<<<<<<< HEAD
-       "              verbatimScientificName  observation_count\n",
-       "0                 Anas platyrhynchos             492526\n",
-       "1                     Apis mellifera             423811\n",
-       "2                  Harmonia axyridis             318474\n",
-       "3                  Passer domesticus             307389\n",
-       "4                   Danaus plexippus             297037\n",
-       "...                              ...                ...\n",
-       "483980             Synchaeta grimpei                  1\n",
-       "483981        Dichapetalum chlorinum                  1\n",
-       "483982  Anthocharis cethura catalina                  1\n",
-       "483983    Chiropterotriton totonacus                  1\n",
-       "483984     Centaurea austroanatolica                  1\n",
-=======
        "         verbatimScientificName  observation_count\n",
        "0            Anas platyrhynchos             492526\n",
        "1                Apis mellifera             423811\n",
@@ -873,16 +777,11 @@
        "483982               Namanereis                  1\n",
        "483983   Nierembergia pinifolia                  1\n",
        "483984  Cyathostemon blackettii                  1\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "\n",
        "[483985 rows x 2 columns]"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 6,
-=======
      "execution_count": 8,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,12 +972,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-   "id": "b322076d",
-=======
    "execution_count": 9,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [
     {
@@ -1129,29 +1023,17 @@
        "      <th>0</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
-<<<<<<< HEAD
-       "      <td>35.130113</td>\n",
-       "      <td>-120.632645</td>\n",
-       "      <td>US</td>\n",
-       "      <td>7</td>\n",
-=======
        "      <td>-34.962654</td>\n",
        "      <td>138.561921</td>\n",
        "      <td>AU</td>\n",
        "      <td>1</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
-<<<<<<< HEAD
-       "      <td>26.312293</td>\n",
-       "      <td>-80.156558</td>\n",
-=======
        "      <td>28.146819</td>\n",
        "      <td>-80.649612</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1159,43 +1041,26 @@
        "      <th>2</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
-<<<<<<< HEAD
-       "      <td>27.824803</td>\n",
-       "      <td>-82.312238</td>\n",
-       "      <td>US</td>\n",
-=======
        "      <td>-34.962649</td>\n",
        "      <td>138.561909</td>\n",
        "      <td>AU</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
-<<<<<<< HEAD
-       "      <td>-34.962649</td>\n",
-       "      <td>138.561909</td>\n",
-       "      <td>AU</td>\n",
-=======
        "      <td>26.137394</td>\n",
        "      <td>-97.174221</td>\n",
        "      <td>US</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
-<<<<<<< HEAD
-       "      <td>28.533196</td>\n",
-       "      <td>-81.363925</td>\n",
-=======
        "      <td>27.824803</td>\n",
        "      <td>-82.312238</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1212,13 +1077,8 @@
        "      <th>54040</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-<<<<<<< HEAD
-       "      <td>37.157650</td>\n",
-       "      <td>-93.259475</td>\n",
-=======
        "      <td>29.412712</td>\n",
        "      <td>-95.250550</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1226,13 +1086,8 @@
        "      <th>54041</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-<<<<<<< HEAD
-       "      <td>32.859110</td>\n",
-       "      <td>-96.845204</td>\n",
-=======
        "      <td>30.531350</td>\n",
        "      <td>-97.573180</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1240,13 +1095,8 @@
        "      <th>54042</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-<<<<<<< HEAD
-       "      <td>36.081928</td>\n",
-       "      <td>-96.013153</td>\n",
-=======
        "      <td>33.153675</td>\n",
        "      <td>-79.366616</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1254,13 +1104,8 @@
        "      <th>54043</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-<<<<<<< HEAD
-       "      <td>37.924334</td>\n",
-       "      <td>-122.528326</td>\n",
-=======
        "      <td>38.219468</td>\n",
        "      <td>-85.686763</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1268,13 +1113,8 @@
        "      <th>54044</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-<<<<<<< HEAD
-       "      <td>33.706305</td>\n",
-       "      <td>-112.031911</td>\n",
-=======
        "      <td>38.257603</td>\n",
        "      <td>-77.484222</td>\n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1285,19 +1125,6 @@
       ],
       "text/plain": [
        "      verbatimScientificName dateOcurrence  decimalLatitude  decimalLongitude  \\\n",
-<<<<<<< HEAD
-       "0           Danaus plexippus    2025-01-01        35.130113       -120.632645   \n",
-       "1           Danaus plexippus    2025-01-01        26.312293        -80.156558   \n",
-       "2           Danaus plexippus    2025-01-01        27.824803        -82.312238   \n",
-       "3           Danaus plexippus    2025-01-01       -34.962649        138.561909   \n",
-       "4           Danaus plexippus    2025-01-01        28.533196        -81.363925   \n",
-       "...                      ...           ...              ...               ...   \n",
-       "54040       Danaus plexippus    2025-10-21        37.157650        -93.259475   \n",
-       "54041       Danaus plexippus    2025-10-21        32.859110        -96.845204   \n",
-       "54042       Danaus plexippus    2025-10-21        36.081928        -96.013153   \n",
-       "54043       Danaus plexippus    2025-10-21        37.924334       -122.528326   \n",
-       "54044       Danaus plexippus    2025-10-21        33.706305       -112.031911   \n",
-=======
        "0           Danaus plexippus    2025-01-01       -34.962654        138.561921   \n",
        "1           Danaus plexippus    2025-01-01        28.146819        -80.649612   \n",
        "2           Danaus plexippus    2025-01-01       -34.962649        138.561909   \n",
@@ -1309,18 +1136,12 @@
        "54042       Danaus plexippus    2025-10-21        33.153675        -79.366616   \n",
        "54043       Danaus plexippus    2025-10-21        38.219468        -85.686763   \n",
        "54044       Danaus plexippus    2025-10-21        38.257603        -77.484222   \n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "\n",
        "      countryCode  countOccurrences  \n",
        "0              US                 7  \n",
        "1              US                 1  \n",
-<<<<<<< HEAD
-       "2              US                 1  \n",
-       "3              AU                 1  \n",
-=======
        "2              AU                 1  \n",
        "3              US                 1  \n",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
        "4              US                 1  \n",
        "...           ...               ...  \n",
        "54040          US                 1  \n",
@@ -1332,11 +1153,7 @@
        "[54045 rows x 6 columns]"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 7,
-=======
      "execution_count": 9,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,12 +1203,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 8,
-   "id": "aff85a9e",
-=======
    "execution_count": 10,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [
     {
@@ -1558,11 +1370,7 @@
        "[280209 rows x 6 columns]"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 8,
-=======
      "execution_count": 10,
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,10 +1422,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-<<<<<<< HEAD
-   "id": "1f8dabf0-c61b-48ae-8c80-751cf02c78e2",
-=======
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1625,13 +1429,9 @@
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
-   "display_name": "Python 3 (ipykernel)",
-=======
-   "display_name": "project",
->>>>>>> eaf31909620c67f639a0b824a9638a6e4ea16eb4
+   "display_name": "COMP-685-Fall-2025",
    "language": "python",
-   "name": "project"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
