ai2 notebook greg

--- a/notebooks/iNaturalist-Greg.ipynb
+++ b/notebooks/iNaturalist-Greg.ipynb
@@ -58,38 +58,38 @@
     }
    ],
    "source": [
-    "# Run this only once\n",
+    "# # Run this only once\n",
     "\n",
-    "# Create or connect to a persistent DB\n",
-    "con = duckdb.connect('data/iNaturalist.duckdb')\n",
-    "print(\"connected\")\n",
+    "# # Create or connect to a persistent DB\n",
+    "# con = duckdb.connect('data/iNaturalist.duckdb')\n",
+    "# print(\"connected\")\n",
     "\n",
-    "# Import TSV once\n",
-    "con.execute(\"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS iNaturalist AS\n",
-    "        SELECT * \n",
-    "        FROM read_csv_auto('../data/0011983-251025141854904.csv', sep='\\t', header=True);\n",
-    "\"\"\")\n",
-    "print(\"created iNaturalist.duckdb\")\n",
+    "# # Import TSV once\n",
+    "# con.execute(\"\"\"\n",
+    "#     CREATE TABLE IF NOT EXISTS iNaturalist AS\n",
+    "#         SELECT * \n",
+    "#         FROM read_csv_auto('../data/0011983-251025141854904.csv', sep='\\t', header=True);\n",
+    "# \"\"\")\n",
+    "# print(\"created iNaturalist.duckdb\")\n",
     "\n",
-    "# Optionally add indexes\n",
-    "con.execute(\"PRAGMA enable_object_cache;\")\n",
-    "print(\"add indexes\")\n",
+    "# # Optionally add indexes\n",
+    "# con.execute(\"PRAGMA enable_object_cache;\")\n",
+    "# print(\"add indexes\")\n",
     "\n",
     "\n",
-    "# Query repeatedly without rereading the TSV\n",
-    "result = con.execute(\"\"\"\n",
-    "    SELECT COUNT(*)\n",
-    "    FROM iNaturalist\n",
+    "# # Query repeatedly without rereading the TSV\n",
+    "# result = con.execute(\"\"\"\n",
+    "#     SELECT COUNT(*)\n",
+    "#     FROM iNaturalist\n",
     "\n",
-    "\"\"\").df()\n",
+    "# \"\"\").df()\n",
     "\n",
-    "result.head()"
+    "# result.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "dde319ac",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b83f52b1",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "0          131805543"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f3226e2e",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
        "4  COORDINATE_ROUNDED;CONTINENT_DERIVED_FROM_COOR...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,14 +637,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "92b8938b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3a826453440417ca1c85de4ffb91bec",
+       "model_id": "7e1a302fa5114e459ca37357230079ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -713,27 +713,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483980</th>\n",
-       "      <td>Acrophymus veseyi</td>\n",
+       "      <td>Haemanota maculosa</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483981</th>\n",
-       "      <td>Ptecticus erectus</td>\n",
+       "      <td>Rhododendron racemosum</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483982</th>\n",
-       "      <td>Namanereis</td>\n",
+       "      <td>Cotyclytus cristatus</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483983</th>\n",
-       "      <td>Nierembergia pinifolia</td>\n",
+       "      <td>Callista multiradiata</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483984</th>\n",
-       "      <td>Cyathostemon blackettii</td>\n",
+       "      <td>Phyllosma barosmoides</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -742,23 +742,23 @@
        "</div>"
       ],
       "text/plain": [
-       "         verbatimScientificName  observation_count\n",
-       "0            Anas platyrhynchos             492526\n",
-       "1                Apis mellifera             423811\n",
-       "2             Harmonia axyridis             318474\n",
-       "3             Passer domesticus             307389\n",
-       "4              Danaus plexippus             297037\n",
-       "...                         ...                ...\n",
-       "483980        Acrophymus veseyi                  1\n",
-       "483981        Ptecticus erectus                  1\n",
-       "483982               Namanereis                  1\n",
-       "483983   Nierembergia pinifolia                  1\n",
-       "483984  Cyathostemon blackettii                  1\n",
+       "        verbatimScientificName  observation_count\n",
+       "0           Anas platyrhynchos             492526\n",
+       "1               Apis mellifera             423811\n",
+       "2            Harmonia axyridis             318474\n",
+       "3            Passer domesticus             307389\n",
+       "4             Danaus plexippus             297037\n",
+       "...                        ...                ...\n",
+       "483980      Haemanota maculosa                  1\n",
+       "483981  Rhododendron racemosum                  1\n",
+       "483982    Cotyclytus cristatus                  1\n",
+       "483983   Callista multiradiata                  1\n",
+       "483984   Phyllosma barosmoides                  1\n",
        "\n",
        "[483985 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,14 +950,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "cff7e327",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c613c6bb820484aa13fc3c459ee72fc",
+       "model_id": "1bc65a1503da471dbe97bee8c40cf2e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1002,22 +1002,31 @@
        "      <th>0</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
-       "      <td>-34.962654</td>\n",
-       "      <td>138.561921</td>\n",
-       "      <td>AU</td>\n",
+       "      <td>18.369262</td>\n",
+       "      <td>-65.634262</td>\n",
+       "      <td>PR</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
-       "      <td>28.146819</td>\n",
-       "      <td>-80.649612</td>\n",
-       "      <td>US</td>\n",
+       "      <td>-25.545925</td>\n",
+       "      <td>152.585499</td>\n",
+       "      <td>AU</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Danaus plexippus</td>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>28.024186</td>\n",
+       "      <td>-82.702188</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
        "      <td>-34.962649</td>\n",
@@ -1026,22 +1035,13 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Danaus plexippus</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>26.137394</td>\n",
-       "      <td>-97.174221</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-01-01</td>\n",
-       "      <td>27.824803</td>\n",
-       "      <td>-82.312238</td>\n",
+       "      <td>35.130113</td>\n",
+       "      <td>-120.632645</td>\n",
        "      <td>US</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1056,8 +1056,8 @@
        "      <th>54040</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-       "      <td>29.412712</td>\n",
-       "      <td>-95.250550</td>\n",
+       "      <td>34.234097</td>\n",
+       "      <td>-119.001381</td>\n",
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1065,8 +1065,8 @@
        "      <th>54041</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-       "      <td>30.531350</td>\n",
-       "      <td>-97.573180</td>\n",
+       "      <td>33.012233</td>\n",
+       "      <td>-83.734720</td>\n",
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1074,8 +1074,8 @@
        "      <th>54042</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-       "      <td>33.153675</td>\n",
-       "      <td>-79.366616</td>\n",
+       "      <td>37.885718</td>\n",
+       "      <td>-122.298297</td>\n",
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1083,8 +1083,8 @@
        "      <th>54043</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-       "      <td>38.219468</td>\n",
-       "      <td>-85.686763</td>\n",
+       "      <td>30.070267</td>\n",
+       "      <td>-95.739158</td>\n",
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1092,8 +1092,8 @@
        "      <th>54044</th>\n",
        "      <td>Danaus plexippus</td>\n",
        "      <td>2025-10-21</td>\n",
-       "      <td>38.257603</td>\n",
-       "      <td>-77.484222</td>\n",
+       "      <td>33.124910</td>\n",
+       "      <td>-96.922654</td>\n",
        "      <td>US</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1104,24 +1104,24 @@
       ],
       "text/plain": [
        "      verbatimScientificName dateOcurrence  decimalLatitude  decimalLongitude  \\\n",
-       "0           Danaus plexippus    2025-01-01       -34.962654        138.561921   \n",
-       "1           Danaus plexippus    2025-01-01        28.146819        -80.649612   \n",
-       "2           Danaus plexippus    2025-01-01       -34.962649        138.561909   \n",
-       "3           Danaus plexippus    2025-01-01        26.137394        -97.174221   \n",
-       "4           Danaus plexippus    2025-01-01        27.824803        -82.312238   \n",
+       "0           Danaus plexippus    2025-01-01        18.369262        -65.634262   \n",
+       "1           Danaus plexippus    2025-01-01       -25.545925        152.585499   \n",
+       "2           Danaus plexippus    2025-01-01        28.024186        -82.702188   \n",
+       "3           Danaus plexippus    2025-01-01       -34.962649        138.561909   \n",
+       "4           Danaus plexippus    2025-01-01        35.130113       -120.632645   \n",
        "...                      ...           ...              ...               ...   \n",
-       "54040       Danaus plexippus    2025-10-21        29.412712        -95.250550   \n",
-       "54041       Danaus plexippus    2025-10-21        30.531350        -97.573180   \n",
-       "54042       Danaus plexippus    2025-10-21        33.153675        -79.366616   \n",
-       "54043       Danaus plexippus    2025-10-21        38.219468        -85.686763   \n",
-       "54044       Danaus plexippus    2025-10-21        38.257603        -77.484222   \n",
+       "54040       Danaus plexippus    2025-10-21        34.234097       -119.001381   \n",
+       "54041       Danaus plexippus    2025-10-21        33.012233        -83.734720   \n",
+       "54042       Danaus plexippus    2025-10-21        37.885718       -122.298297   \n",
+       "54043       Danaus plexippus    2025-10-21        30.070267        -95.739158   \n",
+       "54044       Danaus plexippus    2025-10-21        33.124910        -96.922654   \n",
        "\n",
        "      countryCode  countOccurrences  \n",
-       "0              US                 7  \n",
-       "1              US                 1  \n",
-       "2              AU                 1  \n",
-       "3              US                 1  \n",
-       "4              US                 1  \n",
+       "0              PR                 1  \n",
+       "1              AU                 1  \n",
+       "2              US                 1  \n",
+       "3              AU                 1  \n",
+       "4              US                 7  \n",
        "...           ...               ...  \n",
        "54040          US                 1  \n",
        "54041          US                 1  \n",
@@ -1132,7 +1132,7 @@
        "[54045 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "4edeee88",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1350,7 @@
        "[280209 rows x 6 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
