--- a/notebooks/ERA5_Ai2_Climate_Emulator_Greg.ipynb
+++ b/notebooks/ERA5_Ai2_Climate_Emulator_Greg.ipynb
@@ -2405,7 +2405,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2419,7 +2419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
